removed css and using less instead

--- a/trunk/Portal/Portal.Web/Portal.Web/Areas/Google-Analytics/Views/GoogleAnalytics/Index.cshtml
+++ b/trunk/Portal/Portal.Web/Portal.Web/Areas/Google-Analytics/Views/GoogleAnalytics/Index.cshtml
@@ -13,3 +13,9 @@
     </li>
 </ul>
 
+
+
+<div class="content-padding">
+<a href="http://www.google.com.au/analytics/">View Google Analytics</a>
+
+    </div>
