--- a/trunk/Portal/Portal.Web/Portal.Web/Content/less/common/navigation.less
+++ b/trunk/Portal/Portal.Web/Portal.Web/Content/less/common/navigation.less
@@ -4,14 +4,14 @@
 
 
 
-header { background: #3C454F; height: 35px; color: #ffffff; line-height: 35px; padding: 0px 0px 0px 20px; display: block; }
+header { background: #333333; height: 35px; color: #ffffff; line-height: 35px; padding: 0px 0px 0px 20px; display: block; }
 header a { text-decoration: none; font-weight: bold; color: #ffffff; font-family: 'Signika', sans-serif; font-size: 1.2em; }
 header a:hover { text-decoration: underline; color: #ffffff; }
 
 header ul { float: right; }
 header ul li { float: left; margin-left: 2px; }
 header ul li { -webkit-transition: all .25s linear; transition: all .25s linear;  }
-header ul li:hover { background: lighten(#3C454F, 10%); }
+header ul li:hover { background: lighten(#333333, 5%); }
 
 
 header ul li a { display: block; padding: 0px 30px 0px 30px; -webkit-transition: all .25s linear; transition: all .25s linear; }
@@ -19,6 +19,7 @@ header ul li.selected { background: #ffffff; }
 header ul li.selected a { color: #000000; }
 
 header ul li:hover a { color: #ffffff; } 
+header ul li.selected:hover a { color: #000000; } 
 
 
 .sub-navigation { width: 100%; overflow: hidden; }
@@ -28,4 +29,4 @@ header ul li:hover a { color: #ffffff; }
    
 .sub-navigation > li > a:last-child { border-left: 1px solid #ffffff; }
 
-.sub-navigation > li > h1 { background: #a2c865; font-weight: bold; float: left; padding: 10px 30px 10px 30px; margin-left: 1px; margin-right: 1px; margin-top: 1px; text-align: center; min-width: 140px; color: #ffffff; font-size: 1.8em; }
+.sub-navigation > li > h1 { background: #8bc53f; font-weight: bold; float: left; padding: 10px 30px 10px 30px; margin-left: 1px; margin-right: 1px; margin-top: 1px; text-align: center; min-width: 140px; color: #ffffff; font-size: 1.8em; }
