--- a/trunk/Portal/Portal.Web/Portal.Web/Views/Shared/_Layout.cshtml
+++ b/trunk/Portal/Portal.Web/Portal.Web/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <html>
 <head>
     <title>@ViewBag.Title</title>
-    <link href="@Url.Content("/content/site.css")" rel="stylesheet" type="text/css" />
+    <link href="@Url.Content("/content/less/site.less")" rel="stylesheet" type="text/css" />
     
     @*<link href='http://fonts.googleapis.com/css?family=Signika:400,700,600,300' rel='stylesheet' type='text/css'>*@
 
