set the Lease Commencement to just the month and year

--- a/trunk/Auslink/Auslink.Web/Views/PropertyPortfolio/Albury.cshtml
+++ b/trunk/Auslink/Auslink.Web/Views/PropertyPortfolio/Albury.cshtml
@@ -36,7 +36,7 @@
     </li>
     <li>
         <p>Lease Commencement:</p>
-        <p>29 October 2009</p>
+        <p>October 2009</p>
     </li>
 </ul>
 
