--- a/trunk/Auslink/Auslink.Web/Views/PropertyPortfolio/Footscray.cshtml
+++ b/trunk/Auslink/Auslink.Web/Views/PropertyPortfolio/Footscray.cshtml
@@ -36,7 +36,7 @@
     </li>
     <li>
         <p>Lease Commencement:</p>
-        <p>9 November 2012</p>
+        <p>November 2012</p>
     </li>
 </ul>
 
