--- a/trunk/Auslink/Auslink.Web/Views/PropertyPortfolio/Townsville.cshtml
+++ b/trunk/Auslink/Auslink.Web/Views/PropertyPortfolio/Townsville.cshtml
@@ -36,7 +36,7 @@
     </li>
     <li>
         <p>Lease Commencement:</p>
-        <p>4 March 2006</p>
+        <p>March 2006</p>
     </li>
 </ul>
 
