--- a/trunk/Auslink/Auslink.Web/Views/PropertyPortfolio/Port-Pirie.cshtml
+++ b/trunk/Auslink/Auslink.Web/Views/PropertyPortfolio/Port-Pirie.cshtml
@@ -21,7 +21,7 @@
     <li>        <p>Tenant:</p>        <p>Commonwealth Government</p>    </li>
     <li>        <p>Lease Term:</p>        <p>7 years + 2 x 3 years</p>    </li>
     <li>        <p>Lease Commencement:</p>
-        <p>11 May 2012</p>
+        <p>May 2012</p>
     </li>
 </ul>
 
