added "New" property functionality

--- a/trunk/Portal/Portal.Web/Portal.Web/Areas/Property-Editor/Views/Properties/Index.cshtml
+++ b/trunk/Portal/Portal.Web/Portal.Web/Areas/Property-Editor/Views/Properties/Index.cshtml
@@ -19,7 +19,7 @@
 .new-property { float: right; }
 </style>
 
-@Html.RouteLink("New Property", PropertyEditorAreaRegistration.Edit, new { }, new { @class = "new-property button white-arrow" })
+@Html.RouteLink("New Property", PropertyEditorAreaRegistration.New, new { }, new { @class = "new-property button white-arrow" })
 
 <div class="content-padding">
 
