updated auslink website with latest updates

--- a/trunk/Auslink/Auslink.Web/Views/Home/Index.cshtml
+++ b/trunk/Auslink/Auslink.Web/Views/Home/Index.cshtml
@@ -22,6 +22,6 @@
 </p>
 
 <p>
-    Established in December 2008, the Trust currently owns seven Centrelink Customer Service Centres in Boronia VIC, Carnarvon WA,
-    Port Pirie SA, Footscray VIC, Albury NSW, Townsville QLD, and South Brisbane QLD, and is developing an eigth Centrelink in Bowen QLD.
+    Established in December 2008, the Trust currently owns eight Centrelink Customer Service Centres in Boronia VIC, Carnarvon WA,
+    Port Pirie SA, Footscray VIC, Albury NSW, Townsville QLD, South Brisbane QLD, Bowen QLD, and is developing a ninth Centrelink in Port Augusta SA.
 </p>
