--- a/trunk/Auslink/Auslink.Web/Views/Members/CurrentUnitholders.cshtml
+++ b/trunk/Auslink/Auslink.Web/Views/Members/CurrentUnitholders.cshtml
@@ -33,12 +33,12 @@
 
     <ul class="table two-column">
         <li>
-            <p>Amount:</p>
-            <p>10.0 cents per unit</p>
+            <p>FY 2014:</p>
+            <p>10.0 cents per unit (100% tax defered)</p>
         </li>
         <li>
-            <p>Tax Deferred:</p>
-            <p>100% </p>
+            <p>FY 2015:</p>
+            <p>10.3 cents per unit (50% tax defered)</p>
         </li>
     </ul>
     
@@ -53,11 +53,11 @@
         </li>
         <li>
             <p>Period:</p>
-            <p>Quarter ending 31 December 2013</p>
+            <p>Quarter ending 30 June 2014</p>
         </li>
         <li>
             <p>Payment Date:</p>
-            <p>30 January 2013</p>
+            <p>30 July 2014</p>
         </li>
     </ul>
 
@@ -75,6 +75,9 @@
 
     <h3>Quarterly updates</h3>
     <p>
+        March 2014 <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/Quarterly-Update-March-2014.pdf">(download pdf)</a> <br/>
+        December 2013 <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/Quarterly-Update-December-2013.pdf">(download pdf)</a> <br/>
+
         September 2013 
         <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/Quarterly-Update-September-2013-1.pdf">(part1)</a>
         <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/Quarterly-Update-September-2013-2.pdf">(part2)</a>
