--- a/trunk/Auslink/Auslink.Web/Views/PropertyPortfolio/Bowen.cshtml
+++ b/trunk/Auslink/Auslink.Web/Views/PropertyPortfolio/Bowen.cshtml
@@ -16,7 +16,7 @@
 <ul class="table two-column">
     <li>
         <p>Address:</p>
-        <p>53 Bowen St, Bowen, QLD</p>
+        <p>53 George St, Bowen, QLD</p>
     </li>
     <li>
         <p>Description:</p>	
@@ -24,7 +24,7 @@
     </li>
     <li>
         <p>Net Lettable Area:</p>
-        <p>680 square metres</p>
+        <p>600 square metres</p>
     </li>
     <li>
         <p>Tenant:</p>
@@ -36,7 +36,7 @@
     </li>
     <li>
         <p>Lease Commencement:</p>
-        <p>December 2009</p>
+        <p>February 2014</p>
     </li>
 </ul>
 
