--- a/trunk/Auslink/Auslink.Web/Views/PropertyPortfolio/Carnarvon.cshtml
+++ b/trunk/Auslink/Auslink.Web/Views/PropertyPortfolio/Carnarvon.cshtml
@@ -11,7 +11,7 @@
     @Html.Partial("PropertySideNav")
 }
 
-<h2>Carnarvon, VIC</h2>
+<h2>Carnarvon, WA</h2>
 
 <ul class="table two-column">
     <li>
