--- a/trunk/Auslink/Auslink.Web/Views/PropertyPortfolio/AllProperties.cshtml
+++ b/trunk/Auslink/Auslink.Web/Views/PropertyPortfolio/AllProperties.cshtml
@@ -48,6 +48,10 @@
         <div class="left square dark-green">8</div>
         @Html.RouteLink("Bowen, QLD", "Bowen")
     </li>
+    <li class="dark-grey">
+        <div class="left square dark-grey">3</div>
+        @Html.RouteLink("Port Augusta, SA", "Port-Augusta")
+    </li>
 </ul>
 
 <div class="map">
@@ -60,6 +64,7 @@
         @Html.RouteLink("6", "Townsville", new { }, new { @class = "square light-blue townsville" })
         @Html.RouteLink("7", "Albury", new { }, new { @class = "square light-green albury" })
         @Html.RouteLink("8", "Bowen", new { }, new { @class = "square dark-green bowen" })
+        @Html.RouteLink("9", "Port-Augusta", new { }, new { @class = "square dark-grey port-augusta" })
 
 </div>
 
