--- a/trunk/Auslink/Auslink.Web/Views/Shared/_Layout.cshtml
+++ b/trunk/Auslink/Auslink.Web/Views/Shared/_Layout.cshtml
@@ -47,6 +47,7 @@
                     @Html.RouteLink("Townsville, QLD", "Townsville")
                     @Html.RouteLink("Albury, NSW", "Albury")
                     @Html.RouteLink("Bowen, QLD", "Bowen")
+                    @Html.RouteLink("Port Augusta, SA", "Port-Augusta")
                     
                 </div>
             </li>
