updated homepage text

--- a/trunk/Auslink/Auslink.Web/Views/Home/Index.cshtml
+++ b/trunk/Auslink/Auslink.Web/Views/Home/Index.cshtml
@@ -23,5 +23,5 @@
 
 <p>
     Established in December 2008, the Trust currently owns eight Centrelink Customer Service Centres in Boronia VIC, Carnarvon WA,
-    Port Pirie SA, Footscray VIC, Albury NSW, Townsville QLD, South Brisbane QLD, Bowen QLD, and is developing a ninth Centrelink in Port Augusta SA.
+    Port Pirie SA, Footscray VIC, Albury NSW, Townsville QLD, South Brisbane QLD, and Bowen QLD, and is developing a ninth Centrelink in Port Augusta SA.
 </p>
