changed the text to Auslink Investment Management

--- a/trunk/Auslink/Auslink.Web/Views/About/Overview.cshtml
+++ b/trunk/Auslink/Auslink.Web/Views/About/Overview.cshtml
@@ -38,7 +38,7 @@
             Manager	
         </p>
         <p>
-            Centreway Capital Limited
+            Auslink Investment Management
         </p>
     </li>
     <li>
