--- a/trunk/Auslink/Auslink.Web/Views/Management/TrustManager.cshtml
+++ b/trunk/Auslink/Auslink.Web/Views/Management/TrustManager.cshtml
@@ -19,7 +19,7 @@
 
 <h2>Trust Manager</h2>
 <p>
-    The Manager of the Auslink Property Trust is Centreway Capital Limited.
+    The Manager of the Auslink Property Trust is Auslink Investment Management.
 </p>
 
 <p>
