updated the current unit holders page

--- a/trunk/Auslink/Auslink.Web/Views/Members/CurrentUnitholders.cshtml
+++ b/trunk/Auslink/Auslink.Web/Views/Members/CurrentUnitholders.cshtml
@@ -33,10 +33,6 @@
 
     <ul class="table two-column">
         <li>
-            <p>FY 2014:</p>
-            <p>10.0 cents per unit (100% tax defered)</p>
-        </li>
-        <li>
             <p>FY 2015:</p>
             <p>10.3 cents per unit (50% tax defered)</p>
         </li>
@@ -60,9 +56,16 @@
             <p>30 July 2014</p>
         </li>
     </ul>
+    
+    <p>
+        <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/Auslink-DRP-Election-Form-(Application).pdf">Auslink DRP Election Form (Application)</a><br />
+        <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/Auslink-DRP-Election-Form-(Cancellation).pdf">Auslink DRP Election Form (Cancellation)</a><br />
+        <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/Auslink-DRP-Rules-(1-7-14).pdf">Auslink DRP Rules (1-7-14)</a>
+    </p>
 
 
     <h3>Annual General Meeting</h3>
+    <p>The 2014 AGM will be held in October. Unitholders will be notified as soon as a date is confirmed.</p>
     <p>
         2013 AGM Presentation 
         <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/Quarterly-Update-September-2013-1.pdf">(part1)</a>
@@ -103,7 +106,7 @@
     
     <h3>Tax Statements</h3>
     <p>
-        Tax Statements for the 2013 financial year were mailed to unitholders in early September 2013.
+        Tax Statements for the 2014 financial year will be mailed to unitholders in August 2014.
     </p>
 
     <p>
