added a heading for the current unit holders page

--- a/trunk/Auslink/Auslink.Web/Views/Members/CurrentUnitholders.cshtml
+++ b/trunk/Auslink/Auslink.Web/Views/Members/CurrentUnitholders.cshtml
@@ -57,6 +57,7 @@
         </li>
     </ul>
     
+    <h3>Distribution Reinvestment Plan</h3>
     <p>
         <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/Auslink-DRP-Election-Form-(Application).pdf">Auslink DRP Election Form (Application)</a><br />
         <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/Auslink-DRP-Election-Form-(Cancellation).pdf">Auslink DRP Election Form (Cancellation)</a><br />
