--- a/trunk/Auslink/Auslink.Web/Views/ContactUs/Index.cshtml
+++ b/trunk/Auslink/Auslink.Web/Views/ContactUs/Index.cshtml
@@ -6,4 +6,35 @@
 }
 
 
-<h2>Contact Us</h2><p>    To find out more about the Auslink Property Trust, please contact Centreway Capital Ltd.</p><p>    <strong>Auslink Investment Management</strong><br />    AFSL Number:  318368<br />    ACN: 125 737 091</p><p>    Level 4<br />    627 Chapel St<br />   South Yarra<br />   Victoria 3141</p><p>    Telephone: (03) 9827 4600<br />    Facsimile: (03) 9827 4655</p><p>    Email: <a href="mailto:j.bronts@auslinkproperty.com.au">j.bronts@auslinkproperty.com.au</a><br />    Contact: Jason Bronts</p>
+<h2>Contact Us</h2>
+<p>
+    To find out more about the Auslink Property Trust, please contact Auslink Investment Management.
+</p>
+<p>
+    <strong>Auslink Investment Management ltd</strong><br />
+    AFSL Number:  318368<br />
+    ACN: 125 737 091
+</p>
+<p>
+    Level 4<br />
+    627 Chapel St<br />
+   South Yarra<br />
+   Victoria 3141
+</p>
+<p>
+    Telephone: (03) 9827 4600<br />
+    Facsimile: (03) 9827 4655
+</p>
+<p>
+    Email: <a href="mailto:j.bronts@auslinkproperty.com.au">j.bronts@auslinkproperty.com.au</a><br />
+    Contact: Jason Bronts
+</p>
+
+
+
+
+
+
+
+
+
