added june 2014 quarterly update

--- a/trunk/Auslink/Auslink.Web/Views/Members/CurrentUnitholders.cshtml
+++ b/trunk/Auslink/Auslink.Web/Views/Members/CurrentUnitholders.cshtml
@@ -28,13 +28,13 @@
     <h3>Distributions</h3>
     
     <p class="small-margin-bottom">
-        The forecast distribution and tax deferral component for the 2015 financial year is shown below:
+        The forecast distribution for the 2015 financial year is shown below:
     </p>
 
     <ul class="table two-column">
         <li>
             <p>FY 2015:</p>
-            <p>10.3 cents per unit (50% tax defered)</p>
+            <p>10.3 cents per unit</p>
         </li>
     </ul>
     
@@ -45,15 +45,15 @@
     <ul class="table two-column">
         <li>
             <p>Amount:</p>
-            <p>2.5 cents per unit</p>
+            <p>2.575 cents per unit</p>
         </li>
         <li>
             <p>Period:</p>
-            <p>Quarter ending 30 June 2014</p>
+            <p>Quarter ending 30 September 2014</p>
         </li>
         <li>
             <p>Payment Date:</p>
-            <p>30 July 2014</p>
+            <p>30 October 2014</p>
         </li>
     </ul>
     
@@ -79,6 +79,7 @@
 
     <h3>Quarterly updates</h3>
     <p>
+        June 2014 <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/Quarterly-Update-June-2014.pdf">(download pdf)</a> <br/>
         March 2014 <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/Quarterly-Update-March-2014.pdf">(download pdf)</a> <br/>
         December 2013 <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/Quarterly-Update-December-2013.pdf">(download pdf)</a> <br/>
 
