small auslink changes

--- a/trunk/Auslink/Auslink.Web/Views/Members/CurrentUnitholders.cshtml
+++ b/trunk/Auslink/Auslink.Web/Views/Members/CurrentUnitholders.cshtml
@@ -66,7 +66,7 @@
 
 
     <h3>Annual General Meeting</h3>
-    <p>The 2014 AGM will be held in October. Unitholders will be notified as soon as a date is confirmed.</p>
+    <p>The 2014 AGM will be held in Traralgon on 14 October 2014. Meetings will also be held in Hobart on 17 October 2014 and Horsham on 28 October 2014. Details for each meeting will be mailed to unitholders in mid September.</p>
     <p>
         2013 AGM Presentation 
         <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/Quarterly-Update-September-2013-1.pdf">(part1)</a>
