--- a/trunk/Auslink/Auslink.Web/Views/Management/TrustManager.cshtml
+++ b/trunk/Auslink/Auslink.Web/Views/Management/TrustManager.cshtml
@@ -27,7 +27,7 @@
 </p>
 
 
-<h3>Carl Rooke – Chairman</h3><p>	Carl is a former National Chairman of Horwath Australia and currently acts as a consultant to BDO Kendalls.     Carl commenced his career in chartered Accounting in 1970 and established his own firm in 1974. Carl is a Director     on a number of large private company boards and is a Fellow of the Institute of Chartered Accountants and the Institute     of Company Directors. Carl has a history of successful business practice with over 30 years experience in management,     accounting and finance.</p>
+<h3>Carl Rooke – Chairman</h3><p>	Carl is a former National Chairman of Horwath Australia and currently acts as a consultant to BDO Chartered Accountants.     Carl commenced his career in chartered Accounting in 1970 and established his own firm in 1974. Carl is a Director     on a number of large private company boards and is a Fellow of the Institute of Chartered Accountants and the Institute     of Company Directors. Carl has a history of successful business practice with over 30 years experience in management,     accounting and finance.</p>
 <h3>Hank Bronts – Executive Director</h3>
 <p>
     Hank is the founder of Castlerock, a privately owned company that has grown to become a specialist in developing and 
