--- a/trunk/Auslink/Auslink.Web/Views/Members/CurrentUnitholders.cshtml
+++ b/trunk/Auslink/Auslink.Web/Views/Members/CurrentUnitholders.cshtml
@@ -49,11 +49,11 @@
         </li>
         <li>
             <p>Period:</p>
-            <p>Quarter ending 30 September 2014</p>
+            <p>Quarter ending 31 December 2014</p>
         </li>
         <li>
             <p>Payment Date:</p>
-            <p>30 October 2014</p>
+            <p>30 January 2015</p>
         </li>
     </ul>
     
@@ -66,8 +66,8 @@
 
 
     <h3>Annual General Meeting</h3>
-    <p>The 2014 AGM will be held in Traralgon on 14 October 2014. Meetings will also be held in Hobart on 17 October 2014 and Horsham on 28 October 2014. Details for each meeting will be mailed to unitholders in mid September.</p>
     <p>
+        2014 AGM Presentation <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/Auslink-2014-AGM-Presentation.pdf">(download pdf)</a> <br />
         2013 AGM Presentation 
         <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/Quarterly-Update-September-2013-1.pdf">(part1)</a>
         <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/Quarterly-Update-September-2013-2.pdf">(part2)</a>
@@ -79,6 +79,7 @@
 
     <h3>Quarterly updates</h3>
     <p>
+        September 2014 <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/Auslink-2014-AGM-Presentation.pdf">(download pdf)</a> <br />
         June 2014 <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/Quarterly-Update-June-2014.pdf">(download pdf)</a> <br/>
         March 2014 <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/Quarterly-Update-March-2014.pdf">(download pdf)</a> <br/>
         December 2013 <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/Quarterly-Update-December-2013.pdf">(download pdf)</a> <br/>
@@ -99,6 +100,7 @@
 
     <h3>Financial Reports </h3>
     <p>
+        2014 Financial Year <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/Final-Signed-2014-Accounts.pdf">(download pdf)</a><br />
         2013 Financial Year <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/Final-Signed-2013-Accounts.pdf">(download pdf)</a><br />
         2012 Financial Year <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/Final-Signed-2012-Accounts.pdf">(download pdf)</a><br />
         2011 Financial Year <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/Final-Signed-2011-Accounts.pdf">(download pdf)</a><br />
@@ -108,7 +110,7 @@
     
     <h3>Tax Statements</h3>
     <p>
-        Tax Statements for the 2014 financial year will be mailed to unitholders in August 2014.
+        Tax Statements for the 2014 financial year were mailed to unitholders in August 2014.
     </p>
 
     <p>
