--- a/trunk/Auslink/Auslink.Web/Views/Shared/_Layout.cshtml
+++ b/trunk/Auslink/Auslink.Web/Views/Shared/_Layout.cshtml
@@ -48,7 +48,7 @@
                     @Html.RouteLink("Albury, NSW", "Albury")
                     @Html.RouteLink("Bowen, QLD", "Bowen")
                     @Html.RouteLink("Port Augusta, SA", "Port-Augusta")
-                    
+                    @Html.RouteLink("Goondiwindi, QLD", "Goondiwindi")
                 </div>
             </li>
 
