--- a/trunk/Auslink/Auslink.Web/Views/PropertyPortfolio/AllProperties.cshtml
+++ b/trunk/Auslink/Auslink.Web/Views/PropertyPortfolio/AllProperties.cshtml
@@ -52,6 +52,10 @@
         <div class="left square dark-grey">9</div>
         @Html.RouteLink("Port Augusta, SA", "Port-Augusta")
     </li>
+    <li class="dark-grey">
+        <div class="left square black">10</div>
+        @Html.RouteLink("Goondiwindi, QLD", "Goondiwindi")
+    </li>
 </ul>
 
 <div class="map">
@@ -65,6 +69,7 @@
         @Html.RouteLink("7", "Albury", new { }, new { @class = "square light-green albury" })
         @Html.RouteLink("8", "Bowen", new { }, new { @class = "square dark-green bowen" })
         @Html.RouteLink("9", "Port-Augusta", new { }, new { @class = "square dark-grey port-augusta" })
+        @Html.RouteLink("10", "Goondiwindi", new { }, new { @class = "square black goondiwindi" })
 
 </div>
 
