--- a/trunk/Auslink/Auslink.Web/Views/PropertyPortfolio/Port-Augusta.cshtml
+++ b/trunk/Auslink/Auslink.Web/Views/PropertyPortfolio/Port-Augusta.cshtml
@@ -15,15 +15,13 @@
 
 <ul class="table two-column">
     <li>
-        <p>Status:</p>        <p>Under development</p>    </li>
-    <li>
         <p>Address:</p>        <p>21 - 23 Mackay St, Port Augusta, SA</p>    </li>
     <li>        <p>Description:</p>	        <p>Single level office building with parking for 64 cars</p>    </li>
     <li>        <p>Net Lettable Area:</p>        <p>1500 square metres</p>    </li>
     <li>        <p>Proposed Tenant:</p>        <p>Commonwealth Government</p>    </li>
     <li>        <p>Lease Term:</p>        <p>7 years + 2 x 3 years</p>    </li>
     <li>        <p>Lease Commencement:</p>
-        <p>TBA</p>
+        <p>January 2015</p>
     </li>
 </ul>
 
