--- a/trunk/Auslink/Auslink.Web/Views/Management/PropertyManager.cshtml
+++ b/trunk/Auslink/Auslink.Web/Views/Management/PropertyManager.cshtml
@@ -27,7 +27,7 @@
 </p>
 
 <p>
-    Castlerock has successfully secured and delivered 16 projects for Commonwealth and State Government departments 
+    Castlerock has successfully secured and delivered over 20 projects for Commonwealth and State Government departments 
     over the past 10 years, and has earned an outstanding reputation for developing and managing property to suit the needs of the
     government sector. Over this time Castlerock has developed excellent working relationships with government 
     departments and a unique understanding of their needs and requirements. 
