--- a/trunk/Auslink/Auslink.Web/Views/Management/TrustManager.cshtml
+++ b/trunk/Auslink/Auslink.Web/Views/Management/TrustManager.cshtml
@@ -23,7 +23,7 @@
 </p>
 
 <p>
-    The Directors of Centreway Capital bring together a wealth of experience in funds management, property development, property management, and working with government departments.
+    The Directors of Auslink Investment Management bring together a wealth of experience in funds management, property development, property management, and working with government departments.
 </p>
 
 
