--- a/trunk/Auslink/Auslink.Web/Views/Members/CurrentUnitholders.cshtml
+++ b/trunk/Auslink/Auslink.Web/Views/Members/CurrentUnitholders.cshtml
@@ -28,13 +28,17 @@
     <h3>Distributions</h3>
     
     <p class="small-margin-bottom">
-        The forecast distribution for the 2015 financial year is shown below:
+        The forecast distribution for the 2015 and 2016 financial year is shown below:
     </p>
 
     <ul class="table two-column">
         <li>
             <p>FY 2015:</p>
             <p>10.3 cents per unit</p>
+        </li>
+        <li>
+            <p>FY 2016:</p>
+            <p>10.6 cents per unit</p>
         </li>
     </ul>
     
@@ -49,11 +53,11 @@
         </li>
         <li>
             <p>Period:</p>
-            <p>Quarter ending 31 December 2014</p>
+            <p>Quarter ending 30 June 2015</p>
         </li>
         <li>
             <p>Payment Date:</p>
-            <p>30 January 2015</p>
+            <p>30 July 2015</p>
         </li>
     </ul>
     
@@ -78,7 +82,9 @@
     </p>
 
     <h3>Quarterly updates</h3>
-    <p>
+    <p>        
+        March 2015 <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/Quarterly-Update-March-2015.pdf">(download pdf)</a> <br />
+        December 2014 <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/Quarterly-Update-December-2014.pdf">(download pdf)</a> <br />       
         September 2014 <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/Auslink-2014-AGM-Presentation.pdf">(download pdf)</a> <br />
         June 2014 <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/Quarterly-Update-June-2014.pdf">(download pdf)</a> <br/>
         March 2014 <a href="http://castlerockproperty.blob.core.windows.net/auslinkproperty/pdfs/Quarterly-Update-March-2014.pdf">(download pdf)</a> <br/>
@@ -110,7 +116,7 @@
     
     <h3>Tax Statements</h3>
     <p>
-        Tax Statements for the 2014 financial year were mailed to unitholders in August 2014.
+        Tax Statements for the 2015 financial year will be mailed to unitholders in August 2015.
     </p>
 
     <p>
