--- a/trunk/Auslink/Auslink.Web/Views/PropertyPortfolio/AllProperties.cshtml
+++ b/trunk/Auslink/Auslink.Web/Views/PropertyPortfolio/AllProperties.cshtml
@@ -56,6 +56,10 @@
         <div class="left square black">10</div>
         @Html.RouteLink("Goondiwindi, QLD", "Goondiwindi")
     </li>
+    <li class="light-grey">
+        <div class="left square light-grey">11</div>
+        @Html.RouteLink("Glenorchy, TAS", "Glenorchy")
+    </li>
 </ul>
 
 <div class="map">
@@ -70,6 +74,7 @@
         @Html.RouteLink("8", "Bowen", new { }, new { @class = "square dark-green bowen" })
         @Html.RouteLink("9", "Port-Augusta", new { }, new { @class = "square dark-grey port-augusta" })
         @Html.RouteLink("10", "Goondiwindi", new { }, new { @class = "square black goondiwindi" })
+        @Html.RouteLink("11", "Glenorchy", new { }, new { @class = "square light-grey glenorchy" })
 
 </div>
 
