--- a/trunk/Auslink/Auslink.Web/Views/Shared/_Layout.cshtml
+++ b/trunk/Auslink/Auslink.Web/Views/Shared/_Layout.cshtml
@@ -49,6 +49,7 @@
                     @Html.RouteLink("Bowen, QLD", "Bowen")
                     @Html.RouteLink("Port Augusta, SA", "Port-Augusta")
                     @Html.RouteLink("Goondiwindi, QLD", "Goondiwindi")
+                    @Html.RouteLink("Glenorchy, TAS", "Glenorchy")
                 </div>
             </li>
 
