added some initial CMS editor options

--- a/trunk/Auslink/Auslink.Web.New/Areas/Admin/Content/less/components/sidebar.less
+++ b/trunk/Auslink/Auslink.Web.New/Areas/Admin/Content/less/components/sidebar.less
@@ -13,7 +13,7 @@
         .navigation { margin-top: 50px;
             li {
 
-                a {
+                a,h4 {
                     border-top: 1px solid #32353e;
                     border-bottom: 1px solid #1a1c20;
                     display: block;
