--- a/trunk/Auslink/Auslink.Web.New/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/trunk/Auslink/Auslink.Web.New/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -54,6 +54,14 @@
                     <li>
                         <a href="@Url.RouteUrl(AdminRoutes.QuarterlyUpdates.Index)"><i class="fa fa-refresh"></i> Quarterly Updates</a>
                     </li>
+                    <li>
+                        <h4>Website</h4>
+                        <ul>
+                            <li>
+                                <a href="@Url.RouteUrl(AdminRoutes.Cms.ViewPage, new { name = "home", pageId = "996C83AF-4D1D-41A1-AB1A-4BD56D59AAAB" })">- Homepage</a>
+                            </li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
         </div>
