added returns page to the cms

--- a/trunk/Auslink/Auslink.Web.New/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/trunk/Auslink/Auslink.Web.New/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -60,6 +60,9 @@
                             <li>
                                 <a href="@Url.RouteUrl(AdminRoutes.Cms.ViewPage, new { name = "home", pageId = "996C83AF-4D1D-41A1-AB1A-4BD56D59AAAB" })">- Homepage</a>
                             </li>
+                            <li>
+                                <a href="@Url.RouteUrl(AdminRoutes.Cms.ViewPage, new { name = "returns", pageId = "2616B0E0-5C99-4D5E-93D2-D016998777D0" })">- Returns</a>
+                            </li>
                         </ul>
                     </li>
                 </ul>
