--- a/trunk/Auslink/Auslink.Web.New/Views/Financials/Returns.cshtml
+++ b/trunk/Auslink/Auslink.Web.New/Views/Financials/Returns.cshtml
@@ -17,55 +17,5 @@
     </ul>
 }
 
-<style>
 
-</style>
-
-<h2>Returns</h2>
-
-<p>
-    The objective of the Trust is to provide an average total return to investors over the term of the Trust of 
-    at least 11.0% per annum, with income distributions each year of at least 8.0% per annum. 
-</p>
-<p>
-    Distributions are paid quarterly and expected to be 100% tax advantaged for the next three financial years.
-</p>
-    The returns provided to investors for the last four financial years are provided below.
-</p>
-
-<ul class="table five-column">
-    <li class="table-header">
-        <div class="wide">Year Ending</div>
-        <div>30 June 2012</div>
-        <div>30 June 2013</div>
-        <div>30 June 2014</div>
-        <div>30 June 2015</div>
-    </li>
-
-    <li>
-        <div class="wide">Distribution (per unit)</div>
-        <div>9.0 cents</div>
-        <div>9.3 cents</div>
-        <div>10.0 cents</div>
-        <div>10.3 cents</div>
-    </li>
-
-    <li>
-        <div class="wide">Tax Deferred Component</div>
-        <div>100%</div>
-        <div>100%</div>
-        <div>100%</div>
-        <div>68.1%</div>
-    </li>
-    
-    <li>
-        <div class="wide">Unit Price</div>
-        <div>$1.10</div>
-        <div>$1.16</div>
-        <div>$1.18</div>
-        <div>$1.24</div>
-    </li>
-</ul>
-
-
-
+@Html.Raw(ViewBag.Html)
