--- a/trunk/Auslink/Auslink.Web.New/Views/Management/TrustManager.cshtml
+++ b/trunk/Auslink/Auslink.Web.New/Views/Management/TrustManager.cshtml
@@ -27,13 +27,22 @@
 </p>
 
 
-<h3>Carl Rooke – Chairman</h3><p>	Carl is a former National Chairman of Horwath Australia and currently acts as a consultant to BDO Chartered Accountants.     Carl commenced his career in chartered Accounting in 1970 and established his own firm in 1974. Carl is a Director     on a number of large private company boards and is a Fellow of the Institute of Chartered Accountants and the Institute     of Company Directors. Carl has a history of successful business practice with over 30 years experience in management,     accounting and finance.</p>
+<h3>Carl Rooke – Chairman</h3>
+<p>
+	Carl is a former National Chairman of Horwath Australia and currently acts as a consultant to BDO Chartered Accountants. 
+    Carl commenced his career in chartered Accounting in 1970 and established his own firm in 1974. Carl is a Director 
+    on a number of large private company boards and is a Fellow of the Institute of Chartered Accountants and the Institute 
+    of Company Directors. Carl has a history of successful business practice with over 30 years experience in management, 
+    accounting and finance.
+</p>
 
 <h3>Peter Ryan - Non Executive Director</h3>
 <p>
-    Peter was a long serving member for Gippsland South, representing the district from 1992 to 2015. Peter served as leader 
-    of the Nationals in victoria for 15 years and from 2010 to 2014 was the deputy premier of victoria
-</p>
+    Peter was a long serving Member for Gippsland South, representing the electorate for 22 years. During this time Peter served 
+    as Leader of the Victorian Nationals for 15 years, and from 2010 to 2014 was the Deputy Premier of Victoria. Peter has a deep 
+    knowledge of corporate and political governance based on 20 years in legal practice prior to a career in politics, and is a highly skilled negotiator and trained and qualified mediator.
+</p>
+
 <h3>Hank Bronts – Executive Director</h3>
 <p>
     Hank is the founder of Castlerock, a privately owned company that has grown to become a specialist in developing and 
